Google Auth done

--- a/views/layouts/login.ejs
+++ b/views/layouts/login.ejs
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Story Books</title>
+  <title>Story Books Login</title>
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/crulean.min.css">
   <!-- Compiled and minified CSS -->
@@ -17,8 +17,12 @@
 </head>
 
 <body>
-  <div class="container">
-    <%- body %>
+  <div class="login-container mx-auto">
+    <div class="card">
+      <div class="card-body">
+        <%- body %>
+      </div>
+    </div>
   </div>
 
   <!-- Compiled and minified JavaScript -->
