Added adding Stories to app

--- a/views/home/login.ejs
+++ b/views/home/login.ejs
@@ -5,5 +5,5 @@
 
 <div class="divider"></div>
 <a href="/auth/google" class="btn btn-danger">
-  <i class="fab fa-google mr-3">  Login with Google</i>
+  <i class="fab fa-google mx-3"></i> Login with Google
 </a>
