--- a/views/home/dashboard.ejs
+++ b/views/home/dashboard.ejs
@@ -1,1 +1,41 @@
-<h1>Dashboard</h1>
+<h6>Dashboard</h6>
+<h3>Welcome
+  <%= user.firstName %>
+</h3>
+<p>here are your stories</p>
+
+
+<% if(stories.length>0) { %>
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <th scope="col">Title</th>
+        <th scope="col">Date</th>
+        <th scope="col">Status</th>
+        <th scope="col"></th>
+      </tr>
+    </thead>
+    <tbody>
+      <% stories.forEach(story=>{%>
+        <tr>
+          <td>
+            <a href="/stories/<%=story._id %>">
+              <%= story.title %>
+            </a>
+          </td>
+          <td>
+            <%= story.createdAt.toLocaleDateString() %>
+          </td>
+          <td>
+            <span class="dash-status"><%= story.status %></span>
+          </td>
+          <td></td>
+        </tr>
+        <% }) %>
+    </tbody>
+  </table>
+
+  <%  }else { %>
+    <p>You have not created any stories</p>
+    <% } %>
+      <%- include('../partials/_add_btn.ejs') %>
