Started with Facebook Auth

--- a/views/home/login.ejs
+++ b/views/home/login.ejs
@@ -7,3 +7,7 @@
 <a href="/auth/google" class="btn btn-danger">
   <i class="fab fa-google mx-3"></i> Login with Google
 </a>
+<div class="divider"></div>
+<a href="/auth/facebook" class="btn btn-danger">
+  <i class="fab fa-facebook mx-3"></i> Login with Facebook
+</a>
