--- a/views/stories/story.ejs
+++ b/views/stories/story.ejs
@@ -1,17 +1,14 @@
-<main>
-  <h1 class="mx-auto">
-    <%= story.title %>
-  </h1>
-  <small class="text-muted">Author: <%= story.user.displayName %></small>
-  <div class="fs-5 col-md-8 mx-auto p-5 border">
+<div class="h1 text-center">
+  <%= story.title %>
 
-    <%-story.body-%>
+    <small class="h6 text-muted">Author: <%= story.user.displayName %></small>
+</div>
+<div class="fs-5 col-lg-10 p-3 my-4 mx-auto border">
 
-  </div>
+  <%-story.body-%>
 
-  <div class="mb-5">
-    <a href="/dashboard" class="btn btn-primary btn-lg px-4">Dashboard</a>
-  </div>
+</div>
 
-  <hr class="col-3 col-md-2 mb-5">
-</main>
+<div class="text-center">
+  <a href="/dashboard" class="btn btn-primary btn-lg px-4">Dashboard</a>
+</div>
