--- a/views/home/dashboard.ejs
+++ b/views/home/dashboard.ejs
@@ -24,7 +24,7 @@
             </a>
           </td>
           <td>
-            <%= helper.formatDate(story.createdAt, 'MMMM Do YYYY, h:mm:ss a') %>
+            <%= formatDate(story.createdAt, 'MMMM Do YYYY, h:mm:ss a') %>
           </td>
           <td>
             <span class="dash-status"><%= story.status %></span>
@@ -33,9 +33,9 @@
           <td>
 
 
-            <a href="/stories/edit/<%= story._id %>" class="btn btn-sm btn-info">Edit</a>
+            <a href="/stories/edit/<%= story._id %>" class="btn btn-sm btn-info rounded-circle" title="Edit"><i class="fas fa-edit"></i></a>
             <form action="/stories/<%= story._id %>?_method=DELETE" method="post" class="d-inline">
-              <button type="submit" class="btn btn-sm btn-danger">Delete</button>
+              <button type="submit" class="btn btn-sm btn-danger rounded-circle" title="Delete"><i class="fas fa-trash"></i></button>
             </form>
 
 
