--- a/views/stories/story.ejs
+++ b/views/stories/story.ejs
@@ -1,14 +1,68 @@
 <div class="h1 text-center">
   <%= story.title %>
-
-    <small class="h6 text-muted">Author: <%= story.user.displayName %></small>
+    <small class="h6 text-muted"> 
+      Author:
+      <span class="badge rounded-pill bg-light">
+      <img src="<%= story.user.image %>" alt="" class="rounded-circle" width="25px"> 
+      <a href="/stories/user/<%= story.user._id%>">
+        <%= story.user.displayName %>
+      </a>
+    </span>
+    </small>
 </div>
-<div class="fs-5 col-lg-10 p-3 my-4 mx-auto border">
 
-  <%-story.body-%>
-
+<div class="col-lg-10 shadow  p-3 my-4 mx-auto rounded-top">
+  <%-story.body %>
 </div>
 
-<div class="text-center">
-  <a href="/dashboard" class="btn btn-primary btn-lg px-4">Dashboard</a>
+<form action="/stories/comment" method="POST" id="form">
+  <input type="hidden" name="authorId" value="<%= user._id %>">
+  <input type="hidden" name="storyId" value="<%= story._id %>">
+
+  <fieldset>
+    <div class="form-group row col-lg-10 mx-auto">
+
+      <div class="form-group">
+        <!-- <label for="comment">Leave a Comment</label> -->
+        <input type="text" class="form-control" placeholder="Leave a comment" id="comment" name="comment">
+      </div>
+      <!-- <div class="form-group">
+
+        <button class="form-control btn-sm d-block btn-primary">Save</button>
+      </div> -->
+    </div>
+  </fieldset>
+</form>
+<div class="col-lg-10 mx-auto">
+
+  <% comments.forEach(comment=>{ %>
+    <% if(comment.comment){ %>
+
+      <div class="position-relative bg-light">
+        <img src="<%= comment.author.image %>" alt="" class="position-absolute bottom-50 rounded-circle" width="25px" style="left:15px"> .
+        <div class="bg-dark mx-5 position-relative p-2 rounded-3" style="--bs-bg-opacity: .1;">
+          <span class="badge rounded-pill bg-light" style="--bs-bg-opacity: .15;">
+            <a href="/stories/user/<%= comment.author._id%>">
+              <%= comment.author.displayName %>
+            </a>
+          </span>
+
+
+          <div>
+            <%= comment.comment %>
+          </div>
+        </div>
+      </div>
+      <%}%>
+        <%})%>
 </div>
+
+<script>
+  var comment = document.getElementById('comment')
+  var form = document.getElementById('form')
+  comment.addEventListener('keypress', (e) => {
+    if (e.keyCode === 13) {
+      form.submit()
+    }
+  })
+</script>
