--- a/views/stories/story.ejs
+++ b/views/stories/story.ejs
@@ -22,10 +22,7 @@
   <fieldset>
     <div class="form-group row col-lg-10 mx-auto">
 
-      <div class="form-group">
-        <!-- <label for="comment">Leave a Comment</label> -->
-        <input type="text" class="form-control" placeholder="Leave a comment" id="comment" name="comment">
-      </div>
+
       <!-- <div class="form-group">
 
         <button class="form-control btn-sm d-block btn-primary">Save</button>
@@ -33,6 +30,10 @@
     </div>
   </fieldset>
 </form>
+<div class="form-group">
+  <!-- <label for="comment">Leave a Comment</label> -->
+  <input type="text" class="form-control" placeholder="Leave a comment" id="comment" name="comment">
+</div>
 <div class="col-lg-10 mx-auto">
 
   <% comments.forEach(comment=>{ %>
@@ -58,11 +59,29 @@
 </div>
 
 <script>
+  const socket = new WebSocket('ws://localhost:3000')
+
   var comment = document.getElementById('comment')
-  var form = document.getElementById('form')
+
+
+  // Connection Opened
+  socket.addEventListener('open', (event) => {
+    console.log('Connected to server')
+  })
+
+  // Listen for messages
+  socket.addEventListener('message', (event, isBinary) => {
+
+    console.log(`${event.data}`)
+  })
   comment.addEventListener('keypress', (e) => {
     if (e.keyCode === 13) {
-      form.submit()
+
+      sendMessage(comment.value)
     }
   })
+  const sendMessage = (message) => {
+    alert(comment.value)
+    socket.send(message)
+  }
 </script>
